--- a/sobrenos.html
+++ b/sobrenos.html
@@ -1,66 +1,73 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nós</title>
-    <link rel="stylesheet" href="estilo/sobrenos.css" media="all">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+   <title>Sobre Nós</title>
+   <link rel="stylesheet" href="estilo/sobrenos.css" media="all">
 </head>
 <body onresize="mudaTamanho()">
    <header>
-      <span id="menuham" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+         <span id="menuham" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
       <nav id="itens">
-            <a href="index.html">Home</a>
-            <a href="Menu.html">Menu</a>
-            <a href="Chefes.html">Chefes</a>
-            <a href="Galeria.html">Galeria</a>
-            <a href="Contatos.html">Contatos</a>
-        </nav>
+         <a href="index.html">Home</a>
+         <a href="Menu.html">Menu</a>
+         <a href="Chefes.html">Chefs</a>
+         <a href="Contatos.html">Contatos</a>
+      </nav>
    </header>
-    <main>
+   <main>
          <section>
             <h1>Sobre Nós</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque corporis rerum optio soluta deserunt quisquam maxime pariatur saepe iste error provident autem beatae fugiat deleniti quasi suscipit, tempore a? Corporis.
-            Consequatur, aut ullam! Laudantium ducimus nostrum quo! A mollitia rem ullam ducimus nulla earum reiciendis tenetur nostrum debitis unde minima totam, eius suscipit voluptates ipsam aliquam neque repellat, quos inventore?
-            Corporis repellendus minus illo nulla neque aliquid molestiae unde assumenda voluptate est, laborum et fugit reprehenderit facilis, doloribus in error quae pariatur aspernatur alias. Possimus atque alias sed assumenda aspernatur.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo accusantium earum dolorem, ducimus voluptatibus exercitationem deleniti eaque veritatis magni nesciunt enim sunt eos autem eveniet sequi in nostrum dignissimos. Earum.
+            Aut nesciunt tenetur dignissimos quisquam voluptatum voluptate tempora quis possimus mollitia minus alias perspiciatis, amet culpa incidunt est accusamus cupiditate magni molestias in? Voluptates, accusantium dolor. Consequatur nesciunt maxime ad.</p>
          </section>
-         <section class="imgfundo" id="fundo1">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit quas, dolor aperiam soluta aut architecto magnam itaque assumenda? Accusamus perspiciatis voluptas harum reiciendis eaque assumenda, dolorem tempore incidunt provident soluta!
-            Quod animi illo adipisci delectus maxime voluptates facilis consequatur impedit? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa officia possimus facilis quaerat, distinctio blanditiis voluptatibus aspernatur soluta porro voluptates dicta optio ea vitae ipsum ab. Sapiente magnam minus eveniet!</p>
-         </section>
-         <section>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A voluptate rerum nesciunt quibusdam consequatur et deleniti amet! Autem distinctio fuga, deleniti quia, nam blanditiis debitis perspiciatis aperiam consequatur ad repellendus.
-            Amet asperiores impedit laborum, ut quisquam culpa distinctio ipsam id expedita libero nulla nihil voluptas optio? Unde, libero omnis hic quas id adipisci, odit temporibus totam eum quo, modi itaque!. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam illum commodi fugit, odit saepe eum libero blanditiis totam maiores ut ducimus? Quibusdam qui soluta porro harum voluptatibus eligendi, vitae nesciunt!
-            Neque quidem, ab mollitia facere odio enim reprehenderit debitis officia consequatur nobis ratione fuga, libero, eos dolore delectus dignissimos vel labore excepturi porro natus? Eos esse error dolorum debitis nisi.</p>
-         </section>
-         <section class="imgfundo" id="fundo2">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam harum possimus est animi neque, consequuntur quos debitis natus aliquam! Ipsum delectus quia cum repellendus fugit minima hic dicta iusto earum.
-            Fugit, quod eos ipsa excepturi perspiciatis assumenda minima repellendus incidunt unde aut perferendis sapiente, labore accusantium rerum, repudiandae temporibus aliquid soluta?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet quasi delectus vel adipisci, quia ullam deserunt nam soluta distinctio obcaecati incidunt cupiditate culpa necessitatibus.</p>
+         <section id="fundo1" class="imgfundo">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt alias corrupti rerum quae sint placeat blanditiis, reprehenderit rem? Asperiores natus dolor harum doloribus officia voluptates iure temporibus praesentium, optio repellendus.
+            Nulla debitis deserunt dolore ab eum voluptatem quam laboriosam numquam esse beatae dicta ratione libero dolorum maxime unde ullam explicabo mollitia, nihil temporibus quisquam nisi minus tempore? Quo, quam ea?
+            </p>
          </section>
          <section>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet beatae recusandae quas necessitatibus magnam suscipit eum minus minima molestias repellat? Blanditiis fugiat unde facilis atque nesciunt vitae ad quis nobis.
-            Eius accusantium quibusdam dolorem assumenda est corrupti quasi voluptas error explicabo rerum fugiat, quidem nam deserunt atque dolorum delectus ullam a doloremque magni soluta! Ratione reiciendis pariatur natus quae facilis.
-            Error delectus hic ut? Quaerat iure placeat necessitatibus, veritatis vero voluptas laborum, reiciendis dolor aliquam hic sunt, dolore excepturi illum maxime corrupti incidunt? Nesciunt commodi cumque voluptatem atque blanditiis. Magni?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam numquam corporis neque, sed quas alias praesentium, dolorum magnam eum quae blanditiis. Ab cumque quibusdam amet. Nulla alias accusamus est illum!
+            Maxime omnis ipsum similique nemo accusamus itaque dolorem recusandae, tenetur nesciunt a aperiam ut corrupti enim! Perspiciatis maxime dolorem sunt, ab ullam accusamus doloribus deserunt deleniti fugit vel fugiat est.</p>
          </section>
-    </main>
-    <footer><p>Todos os Direito estão Reservados &copy</p></footer>
-    <script>
-      function mudaTamanho() {
-         if (window.innerWidth >= 577) {
-            itens.style.display = 'block'
-         } else {
-            itens.style.display = 'none'
+         <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dolor blanditiis pariatur nostrum eos tempora facilis nesciunt libero quo fugit possimus rem sunt, quas, molestiae voluptatibus aliquam repellat cum laboriosam!
+            Hic corporis dicta et, consectetur autem dolorem nihil sint ratione numquam praesentium, molestiae tempore perferendis nemo veritatis. Ipsa quo sapiente nesciunt eius perferendis, quod veniam dolor odio minima tenetur fugit?
+            Vel provident minus inventore ipsa mollitia odio perspiciatis eius quisquam, fugiat rerum itaque ratione repellendus animi sunt perferendis praesentium beatae rem debitis deleniti voluptatibus soluta magnam dignissimos officia. Cupiditate, illo?</p>
+         </section>
+        <section id="fundo2" class="imgfundo">
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eum molestiae consectetur optio tenetur inventore delectus quam. Praesentium, ex. Itaque earum modi at architecto possimus dicta fugiat minus nemo maxime.
+           Laboriosam, reiciendis adipisci quis inventore eos reprehenderit, illo ipsam vel error obcaecati praesentium nesciunt excepturi natus ipsa quidem pariatur cumque? Aperiam mollitia repudiandae cupiditate consequatur aliquid culpa sequi, deleniti illum</p>
+        </section>
+        <section>
+           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem illum id modi vitae non iste, laborum impedit amet consequatur repellendus dolorem consequuntur ratione eius nesciunt aliquid debitis fuga, et magni?
+           Fugiat explicabo voluptatibus deleniti debitis quidem quia asperiores ab aspernatur. Quos repudiandae ab quaerat odio at nobis! Aut omnis, ab id quia, nisi hic alias deleniti, vero mollitia quis quae.
+           Soluta modi veritatis illum maiores libero aperiam, eveniet voluptates eum natus vero fugit repellendus quis a facere vitae, dolorem esse neque perferendis sed totam sequi, animi quidem porro. Voluptatem, fugiat?</p>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, numquam animi molestias rem pariatur eum assumenda? Pariatur consequuntur molestiae similique porro impedit tenetur soluta architecto odit laudantium ut, dolore delectus.
+           Debitis quos ea neque quo ex veniam dolor incidunt omnis accusantium maxime? Voluptates, vero? Asperiores sapiente enim sed incidunt iusto eligendi corporis non, vitae vel eum accusantium molestiae ea voluptatem?
+           Ab voluptates, quaerat iste placeat, molestias consequatur quibusdam hic fugiat dignissimos pariatur omnis? Perferendis adipisci architecto cumque quaerat reiciendis explicabo voluptates magnam vero delectus ab sint, itaque ex, commodi quod.</p>
+        </section>
+   </main>
+   <footer>
+      <p>Todos os Direito estão Reservados ©</p></footer>
+      <script>
+         function clickMenu() {
+            if (itens.style.display == 'block') {
+               itens.style.display = 'none'
+            } else {
+               itens.style.display = 'block'
+            }
          }
-      }
-
-      function clickMenu() {
-         if (itens.style.display == 'block') {
-            itens.style.display = 'none'
-         } else {
-            itens.style.display = 'block'
+         
+         function mudaTamanho() {
+            if (window.innerWidth >=577) {
+               itens.style.display = 'block'
+            } else {
+               itens.style.display = 'none'
+            }
          }
-      }
-    </script>
+      </script>
 </body>
 </html>
