--- a/Menu.html
+++ b/Menu.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <title>Menu</title>
     <link rel="stylesheet" href="estilo/menu.css" media="all">
+    <link rel="shortcut icon" href="imagem/lobo.png" type="image/x-icon">
 </head>
 <body onresize="mudouTamanho() ">
     <header>
