--- a/Chefes.html
+++ b/Chefes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
     <title>Chefs</title>
+    <link rel="shortcut icon" href="imagem/lobo.png" type="image/x-icon">
     <link rel="stylesheet" href="estilo/chefs.css" media="all">
 </head>
 <body onresize="mudouTamanho()">
