--- a/sobrenos.html
+++ b/sobrenos.html
@@ -5,6 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
    <title>Sobre Nós</title>
+   <link rel="shortcut icon" href="imagem/lobo.png" type="image/x-icon">
    <link rel="stylesheet" href="estilo/sobrenos.css" media="all">
 </head>
 <body onresize="mudaTamanho()">
