--- a/Contatos.html
+++ b/Contatos.html
@@ -13,8 +13,7 @@
         <div id="menuham">
             <span class="material-symbols-outlined" onclick="clickMenu()">menu</span>
         </div>
-        <div id="Menu" onclick="clickMenu()">
-            <nav>
+            <nav  id="Menu" onclick="clickMenu()">
                 <a href="index.html">Home</a>
                 <a href="Menu.html">Menu</a>
                 <a href="Chefes.html">Chefs</a>
