--- a/contatos/youtube.html
+++ b/contatos/youtube.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina do youtube</title>
+    <link rel="stylesheet" href="../estilo/linkcontato.css">
     <style>
         *{
             margin: 0px;
@@ -27,5 +28,6 @@
 </head>
 <body>
     <img src="../imagem/tela-youtube.png" alt="tela do Youtube">
+        <a  href="https://www.youtube.com" target="_blank">ACESSE</a>
 </body>
 </html>
