--- a/contatos/facebook.html
+++ b/contatos/facebook.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina do Facebook</title>
+    <link rel="stylesheet" href="../estilo/linkcontato.css">
     <style>
         *{
             margin: 0px;
@@ -27,5 +28,6 @@
 </head>
 <body>
     <img src="../imagem/tela-facebook.jpg" alt="tela do Facebook">
+        <a href="https://www.facebook.com/?locale=pt_BR" target="_blank">ACESSE</a>
 </body>
 </html>
