--- a/contatos/instagram.html
+++ b/contatos/instagram.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina do Instagram</title>
+    <link rel="stylesheet" href="../estilo/linkcontato.css">
     <style>
         *{
             margin: 0px;
@@ -27,5 +28,6 @@
 </head>
 <body>
     <img src="../imagem/tela-instagram.jpg" alt="tela do Instagram">
+    <a href="https://www.instagram.com/accounts/password/reset/" target="_blank">ACESSE</a>
 </body>
 </html>
