--- a/contatos/twitter.html
+++ b/contatos/twitter.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina do Twitter</title>
+    <link rel="stylesheet" href="../estilo/linkcontato.css">
     <style>
         *{
             margin: 0px;
@@ -27,5 +28,6 @@
 </head>
 <body>
     <img src="../imagem/tela-twitter.jpg" alt="tela do Twitter">
+        <a href="https://x.com/?lang=pt" target="_blank">ACESSE</a>
 </body>
 </html>
