--- a/contatos/whatsapp.html
+++ b/contatos/whatsapp.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pagina do WhatsApp</title>
+    <link rel="stylesheet" href="../estilo/linkcontato.css">
     <style>
         *{
             margin: 0px;
@@ -27,5 +28,8 @@
 </head>
 <body>
     <img src="../imagem/tela-WhatsApp.jpeg" alt="tela do WhatsApp">
+
+        <a href="https://web.whatsapp.com" target="_blank">ACESSE</a>
+
 </body>
 </html>
