--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1>Toca Do LoBo</h1>
         </div>
         <div id="reserva">
-            <a href="">Faça Sua Reserva</a>
+            <a href="reserva.html">Faça Sua Reserva</a>
         </div>
         <div id="formulario">
             <form action="reserva.php" method="post">
@@ -35,7 +35,7 @@
                     <input type="text" name="nome" id="inome" placeholder="Seu Nome" required autocomplete="name" maxlength="30" size="26">
                 </label>
                 <label for="inum"> Contato:
-                    <input type="tel" name="numero" id="inum" placeholder="(xx) xxxxx -- xxxx" required autocomplete="tel">
+                    <input type="tel" name="numero" id="inum" placeholder="(xx)xxxxx -- xxxx" required autocomplete="tel" pattern= "^\(\d{2}\) \d{4,5}-\d{4}$">
                 </label>
                 <label for="idata"> Data:
                     <input type="date" name="" id="" required>
