--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="titulo">
             <h1>Toca Do LoBo</h1>
         </div>
-        <div id="reserva">
+        <div id="botaoreserva">
             <a href="reserva.html">Faça Sua Reserva</a>
         </div>
         <div id="formulario">
